# Classwork

./: .gitignore  .travis.yml  README.md
163/: CMakeLists.txt  README.md
163/project1/: WeatherApp  datalogger.cpp  datalogger.h  design_questions.txt  linkedlist.cpp  linkedlist.h  makefile  weatherdata.cpp  weatherdata.h  weatherlog.cpp
163/project2/: background.txt  commands.txt  design_questions.txt  expected.txt  instructions.txt  makefile  node.cpp  node.h  queue.cpp  queue.h  readme.txt  rover.cpp  rover.h  rovercontrol.cpp  scandata.cpp  scandata.h  stack.cpp  stack.h  testqueue.cpp  teststack.cpp
163/project3/: background.txt  design_questions.txt  expected.txt  family.cpp  family.h  familydata.txt  familymgr.cpp  familymgr.h  hashtable.cpp  hashtable.h  housinghelper.cpp  instructions.txt  makefile  node.cpp  node.h  readme.txt  testfamily.cpp  testhashtable.cpp
163/project4/: background.txt  design_questions.txt  epilogue.txt  expected.txt  experiments.cpp  instructions.txt  makefile  plant.cpp  plant.h  planttree.cpp  planttree.h  readme.txt  testplant.cpp  testtree.cpp  treenode.cpp  treenode.h
201/: README.md
202/: README.md
300/: README.md
320/: README.md
333/: Makefile  README.md  _waittest  console.c  defs.h  list_management.c  p3-test.c  pdx.h  proc.c  proc.h  ps.c  runoff.list  syscall.c  syscall.h  sysproc.c  testsetuid.c  time.c  user.h  usys.S  waittest.c
350/: .travis.yml  README.md  RUNDOWN.md  benchmark.py  build.sh  merge_sort.py  radix_sort.py  sort_testing.py  (+1 more)
410/hw2/: .gitignore  Cargo.toml  README.md
410/hw2/src/: lib.rs
(+368 files in other folders)
